# genai.cpp

./: CMakeLists.txt  README.md
backends/onnx/: onnx_text_pipeline.cpp  onnx_text_pipeline.hpp  ort_genai.h
backends/openvino/: openvino_text_pipeline.cpp  openvino_text_pipeline.hpp  ov_genai.h
cmake/: FindOrtGenAI.cmake  FindOvGenAI.cmake
examples/: main.cpp
pipelines/: text2text_pipeline.cpp  text2text_pipeline.hpp
